--- a/index.html
+++ b/index.html
@@ -109,8 +109,7 @@
 
         // Function to send data to ThingSpeak
         function sendDataToThingSpeak(latitude, longitude) {
-            var apiKey = "GYA68RWX42KNNOJ2
-";
+            var apiKey = "X8UY1JJ92KAP8TWI";
             var url = "https://api.thingspeak.com/update?api_key=" + apiKey + "&field1=" + latitude + "&field2=" + longitude;
 
             // Send data using fetch API
