--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <h1>Kongu Engineering College</h1>
         <h1>Department of Information Technology</h1>
         <h2>Cloud Computing Lab Ex-9</h2>
-        <h3>SHAMINI S 21ITR099</h3>
+        <h3>PUGALENTHI G 21ITL131</h3>
        
         <button onclick="getLocation()">Get My Location</button><br><br>
        
@@ -109,7 +109,7 @@
 
         // Function to send data to ThingSpeak
         function sendDataToThingSpeak(latitude, longitude) {
-            var apiKey = "X8UY1JJ92KAP8TWI";
+            var apiKey = "KRQWS200A6LFXG7Y";
             var url = "https://api.thingspeak.com/update?api_key=" + apiKey + "&field1=" + latitude + "&field2=" + longitude;
 
             // Send data using fetch API
